testdata/golden/sema/valid/literal_default_types.sg
@entrypoint
fn main() -> int {
    let i = 42;
    let f = 1.0;
    return 0;
}
