testdata/golden/sema/invalid/module_import_subpath/main.sg
import scripts/foo;

fn main() {
    let _ = scripts.foo();
}
